src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__library_ui_tests__tests__snapshot_tests__edit_artist_renders_over_ArtistHistory.snap
---
source: src/ui/lidarr_ui/library/library_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Name ▼                       Type          Status        Quality Profile      Metadata Profile    Albums     Tracks      Size        Monitored  Tags              
=> Alex                         Person        Continuing    Lossless             Standard            1          12/15       0.00 GB     🏷          alex              
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artistShe was born in Madison, Wisconsin: a city she has never really left.Her first album took her  │        
        │seven years to fini╭───────────────────────────────────  Edit - Alex (American pianist)  ────────────────────────────────────╮                     │        
        │Disambiguation: Ame│                                                                                                         │                     │        
        │Type: Person       │                                                                                                         │                     │        
        │Status: Continuing │                                                                                                         │                     │        
        │Genres: soundtrack │                                                                                                         │                     │        
        │Rating: 84%        │                                                                                                         │                     │        
        │Path: /nfs/music/te│                                                                                                         │                     │        
        │Quality Profile: Lo│                                                                                                         │                     │        
        │Metadata Profile: S│                                                                                                         │                     │        
        │Monitored: Yes     │                                                  ╭───╮                                                  │                     │        
        │Albums: 1          │                                       Monitored: │ ✔ │                                                  │                     │        
        │Tracks: 12/15      │                                                  ╰───╯                                                  │                     │        
        │╭  Artist Details  │                                                  ╭─────────────────────────────────────────────────╮    │────────────────────╮│        
        ││ Albums │ History │                              Monitor New Albums: │All Albums                                     ▼ │    │                    ││        
        ││──────────────────│                                                  ╰─────────────────────────────────────────────────╯    │────────────────────││        
        ││   Source Title ▼ │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││=> Test source tit│                                 Quality Profile: │Lossless                                       ▼ │    │0:00 UTC            ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                Metadata Profile: │Standard                                       ▼ │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Path: │/nfs/music                                       │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                  ╭─────────────────────────────────────────────────╮    │                    ││        
        ││                  │                                            Tags: │alex                                             │    │                    ││        
        ││                  │                                                  ╰─────────────────────────────────────────────────╯    │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │                                                                                                         │                    ││        
        ││                  │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                    ││        
        ││                  ││                       Save                        ││                      Cancel                      ││                    ││        
        ││                  │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                    ││        
        ││                  ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
